--- a/NextBus10/res/values/strings.xml
+++ b/NextBus10/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">NextBus10</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="ola_mundo">teste de versionamento ok</string>
 
 </resources>
